[package]
name = "sugraph_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
graphql_client = {features = ["reqwest-blocking"] }
serde = "^1.0"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
prettytable-rs = "^0.7"
clap = { version = "^3.0", features = ["derive"] }
log = "^0.4"
env_logger = "^0.5"
tokio = {version = "1.18.0", features = ["full"] }
